@@ -37,6 +37,8 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   * apt-pkg/aptconfiguration.cc:
     - if APT::Languages=none save "none" in allCodes so that the detected
       configuration is cached as intended (Closes: #674690, LP: #1004947)
+  * apt-pkg/cacheiterators.h:
+    - add an IsMultiArchImplicit() method for Dep- and PrvIterator
 
   [ Justin B Rye ]
   * doc/apt-cdrom.8.xml:
